--- a/index.html
+++ b/index.html
@@ -23,15 +23,17 @@
         <div id="inputContainer">
           <label for="searchWord">Giphy Search:</label>
           <input style="margin: 2rem" type="text" id="searchWord" />
-          <button id="submitSearch">Giphy by Search</button>
+          <button type = "click" id="submitSearch">Giphy by Search</button>
         </div>
 
         <div id="imageContainer" style="max-width: 680px">
           <img
+            id = "img"
             src="#"
             alt="Giphy Selection"
             style="width: 100%; height: auto"
           />
+          <p id = "feedback">feedback</p>
         </div>
       </div>
     </main>
